...
                Spacer()

                SafeTLogoView()
                    .padding(.bottom, 16)

                field(
                    title: "USERNAME",
                    text: $username,
                    contentType: .username,
                    autocaps: false,
                    field: .username
                )
                .submitLabel(.next)
                .onSubmit { focused = .password }

                field(
                    title: "PASSWORD",
                    text: $password,
                    contentType: .password,
                    isSecure: true,
                    field: .password
                )
                .submitLabel(.go)
...
